# xv6-paging

./: CMakeLists.txt  Makefile  defs.h  exec.c  ide.c  kalloc.c  main.c  proc.c  qemu-queue.h  queue.h  spinlock.c  sysproc.c  trap.c  vm.c
