cmake_minimum_required(VERSION 3.3)
project(xv6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    asm.h
    bio.c
    bootasm.S
    bootmain.c
    buf.h
    cat.c
    console.c
    defs.h
    echo.c
    elf.h
    entry.S
    entryother.S
    exec.c
    fcntl.h
    file.c
    file.h
    forktest.c
    fs.c
    fs.h
    grep.c
    ide.c
    init.c
    initcode.S
    ioapic.c
    kalloc.c
    kbd.c
    kbd.h
    kernel.ld
    kill.c
    lapic.c
    ln.c
    log.c
    ls.c
    main.c
    Makefile
    memide.c
    memlayout.h
    mkdir.c
    mkfs.c
    mmu.h
    mp.c
    mp.h
    param.h
    picirq.c
    pipe.c
    printf.c
    proc.c
    proc.h
    rm.c
    sh.c
    spinlock.c
    spinlock.h
    stat.h
    stressfs.c
    string.c
    swtch.S
    syscall.c
    syscall.h
    sysfile.c
    sysproc.c
    timer.c
    trap.c
    trapasm.S
    traps.h
    types.h
    uart.c
    ulib.c
    umalloc.c
    user.h
    usertests.c
    vm.c
    wc.c
    x86.h
    zombie.c)

add_executable(xv6 ${SOURCE_FILES})